Fixed scrollbar issue

--- a/htdocs/atlas-point1/page1/page1.css
+++ b/htdocs/atlas-point1/page1/page1.css
@@ -3,7 +3,7 @@ html,body{
 	height:1080;
 }
 #content {
-padding: 18px 0px 0px 0px;
+padding: 15px 0px;
 }
 .container{
 	width:1800px;
@@ -20,6 +20,7 @@ padding: 18px 0px 0px 0px;
 }	
 .detectorControl{
 	width: 464px;
+	height: 472px;
 }
 .detectorControl img{
 	width: 464px;
